; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_common/extr_mesh_buf.c_net_buf_simple_pull_mem.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_common/extr_mesh_buf.c_net_buf_simple_pull_mem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_buf_simple = type { i64, i8* }

@.str = private unnamed_addr constant [15 x i8] c"buf %p len %zu\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @net_buf_simple_pull_mem(%struct.net_buf_simple* %0, i64 %1) #0 {
  %3 = alloca %struct.net_buf_simple*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store %struct.net_buf_simple* %0, %struct.net_buf_simple** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.net_buf_simple*, %struct.net_buf_simple** %3, align 8
  %7 = getelementptr inbounds %struct.net_buf_simple, %struct.net_buf_simple* %6, i32 0, i32 1
  %8 = load i8*, i8** %7, align 8
  store i8* %8, i8** %5, align 8
  %9 = load %struct.net_buf_simple*, %struct.net_buf_simple** %3, align 8
  %10 = load i64, i64* %4, align 8
  %11 = call i32 @NET_BUF_SIMPLE_DBG(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), %struct.net_buf_simple* %9, i64 %10)
  %12 = load %struct.net_buf_simple*, %struct.net_buf_simple** %3, align 8
  %13 = getelementptr inbounds %struct.net_buf_simple, %struct.net_buf_simple* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* %4, align 8
  %16 = icmp uge i64 %14, %15
  %17 = zext i1 %16 to i32
  %18 = call i32 @NET_BUF_SIMPLE_ASSERT(i32 %17)
  %19 = load i64, i64* %4, align 8
  %20 = load %struct.net_buf_simple*, %struct.net_buf_simple** %3, align 8
  %21 = getelementptr inbounds %struct.net_buf_simple, %struct.net_buf_simple* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = sub i64 %22, %19
  store i64 %23, i64* %21, align 8
  %24 = load i64, i64* %4, align 8
  %25 = load %struct.net_buf_simple*, %struct.net_buf_simple** %3, align 8
  %26 = getelementptr inbounds %struct.net_buf_simple, %struct.net_buf_simple* %25, i32 0, i32 1
  %27 = load i8*, i8** %26, align 8
  %28 = getelementptr i8, i8* %27, i64 %24
  store i8* %28, i8** %26, align 8
  %29 = load i8*, i8** %5, align 8
  ret i8* %29
}

declare dso_local i32 @NET_BUF_SIMPLE_DBG(i8*, %struct.net_buf_simple*, i64) #1

declare dso_local i32 @NET_BUF_SIMPLE_ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
